extra/frontend-admin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: <group-name>-frontend-admin-service
  namespace: <group-name>-app
spec:
  selector:
    app: <group-name>-frontend-admin
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: <group-name>-frontend-admin-deployment
  namespace: <group-name>-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <group-name>-frontend-admin
  template:
    metadata:
      labels:
        app: <group-name>-frontend-admin
    spec:
      containers:
        - name: <group-name>-frontend-admin
          image: <dockerhub-username>/<frontend-admin-image-name>:<tag>
          ports:
            - containerPort: 3000
